--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,23 +5,91 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:onClick="logout"
+    android:background="@android:color/holo_blue_dark"
     tools:context=".Registration">
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="236dp"
-        android:layout_height="119dp"
-        android:layout_marginStart="154dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="167dp"
-        android:layout_marginBottom="501dp"
-        android:onClick="logout"
-        android:text="logout"
+    <EditText
+        android:id="@+id/RegistrationEmailAddress"
+        android:layout_width="258dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="101dp"
+        android:layout_marginBottom="488dp"
+        android:background="@drawable/white_border"
+        android:drawableLeft="@drawable/ic_email"
+        android:ems="10"
+        android:hint="email"
+        android:inputType="textEmailAddress"
+        android:paddingStart="8dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="4dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="4dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.395"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="86dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="212dp"
+        android:layout_marginEnd="163dp"
+        android:layout_marginBottom="103dp"
+        android:text="Registrazione"
+        app:layout_constraintBottom_toTopOf="@+id/RegistrationEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.028" />
+        app:layout_constraintVertical_bias="0.793" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="121dp"
+        android:layout_marginEnd="159dp"
+        android:layout_marginBottom="210dp"
+        android:onClick="registration"
+        android:text="Registrati"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RegistrationPassword"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/RegistrationPassword"
+        android:layout_width="268dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="97dp"
+        android:layout_marginBottom="380dp"
+        android:background="@drawable/white_border"
+        android:drawableLeft="@drawable/baseline_security_24"
+        android:ems="10"
+        android:hint=" password"
+        android:inputType="textPassword"
+        android:paddingStart="8dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="4dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="4dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/RegistrationEmailAddress"
+        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintStart_toStartOf="@+id/RegistrationEmailAddress"
+        app:layout_constraintTop_toBottomOf="@+id/RegistrationEmailAddress"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
