--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
     <Button
@@ -32,7 +32,7 @@
         style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
         android:layout_width="217dp"
         android:layout_height="41dp"
-        android:background="@drawable/white_border"
+        android:background="@drawable/green_border"
         android:drawableLeft="@drawable/ic_email"
         android:ems="10"
         android:hint=" email"
@@ -54,7 +54,7 @@
         android:layout_width="217dp"
         android:layout_height="41dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/white_border"
+        android:background="@drawable/green_border"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,32 +64,18 @@
         app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="65dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="124dp"
-        android:layout_marginBottom="122dp"
-        app:layout_constraintBottom_toTopOf="@+id/EmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/baseline_security_24" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="177dp"
-        android:layout_marginTop="37dp"
         android:layout_marginEnd="176dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="16dp"
         android:text="Login"
         app:layout_constraintBottom_toTopOf="@+id/EmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -139,5 +125,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="169dp"
+        android:layout_height="163dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.14"
+        app:srcCompat="@drawable/logoInsubriaGrande" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
