--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="108dp"
         android:layout_marginEnd="101dp"
         android:layout_marginBottom="488dp"
-        android:background="@drawable/white_border"
+        android:background="@drawable/green_border"
         android:drawableLeft="@drawable/ic_email"
         android:ems="10"
         android:hint="email"
@@ -73,7 +73,7 @@
         android:layout_height="39dp"
         android:layout_marginTop="97dp"
         android:layout_marginBottom="380dp"
-        android:background="@drawable/white_border"
+        android:background="@drawable/green_border"
         android:drawableLeft="@drawable/baseline_security_24"
         android:ems="10"
         android:hint=" password"
