--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,47 +9,36 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/facebookButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="43dp"
-        android:text="Facebook"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.921" />
-
-    <Button
         android:id="@+id/registerButton"
         style="@style/Widget.Material3.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#000000"
+        android:layout_width="247dp"
+        android:layout_height="49dp"
+        android:backgroundTint="#007161"
+        android:drawableLeft="@drawable/baseline_email_white"
         android:onClick="goToRegistrationActivity"
-        android:text="Registrati"
+        android:text="Registrati tramite Email"
         android:textColorLink="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.321"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.824"
+        app:layout_constraintVertical_bias="0.777"
         app:rippleColor="@color/black" />
 
     <Button
         android:id="@+id/googleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
+        android:layout_width="247dp"
+        android:layout_height="49dp"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="30dp"
-        android:text="Google"
+        android:backgroundTint="#007161"
+        android:drawableLeft="@drawable/google_icon"
+        android:text="Registrati tramite Google"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.921" />
+        app:layout_constraintVertical_bias="0.862" />
 
     <EditText
         android:id="@+id/EmailAddress"
@@ -57,7 +46,7 @@
         android:layout_width="217dp"
         android:layout_height="41dp"
         android:background="@drawable/green_border"
-        android:drawableLeft="@drawable/ic_email"
+        android:drawableLeft="@drawable/ic_email_black"
         android:ems="10"
         android:hint=" Email"
         android:hyphenationFrequency="normal"
@@ -123,14 +112,14 @@
         android:backgroundTint="#007161"
         android:onClick="onClickListener"
         android:text="Login"
-        android:textSize="17dp"
         android:textColorLink="#000000"
+        android:textSize="17dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.623"
+        app:layout_constraintVertical_bias="0.622"
         app:rippleColor="@color/black" />
 
     <ImageView
@@ -143,5 +132,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.14"
         app:srcCompat="@drawable/logoinsubriagrande" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Non sei ancora registrato?"
+        android:textColor="#007161"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
