--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -17,7 +17,7 @@
         android:layout_marginEnd="101dp"
         android:layout_marginBottom="488dp"
         android:background="@drawable/green_border"
-        android:drawableLeft="@drawable/ic_email"
+        android:drawableLeft="@drawable/ic_email_black"
         android:ems="10"
         android:hint="email"
         android:inputType="textEmailAddress"
