Migliorata la schermata di registrazione e aggiunta pulsante indietro

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,88 +8,129 @@
     android:background="@drawable/background"
     tools:context=".Registration">
 
-    <EditText
-        android:id="@+id/RegistrationEmailAddress"
-        android:layout_width="258dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="101dp"
-        android:layout_marginBottom="488dp"
-        android:background="@drawable/green_border"
-        android:drawableLeft="@drawable/ic_email_black"
-        android:ems="10"
-        android:hint="email"
-        android:inputType="textEmailAddress"
-        android:paddingStart="8dp"
-        android:paddingLeft="8dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="4dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="4dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.395"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="86dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="212dp"
-        android:layout_marginEnd="163dp"
-        android:layout_marginBottom="103dp"
-        android:text="Registrazione"
-        app:layout_constraintBottom_toTopOf="@+id/RegistrationEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.793" />
-
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="121dp"
-        android:layout_marginEnd="159dp"
-        android:layout_marginBottom="210dp"
+        style="@style/Widget.Material3.Button"
+        android:layout_width="131dp"
+        android:layout_height="48dp"
+        android:backgroundTint="#007161"
         android:onClick="registration"
         android:text="Registrati"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.21"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RegistrationPassword"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.708"
+        app:rippleColor="@color/black" />
+
+    <EditText
+        android:id="@+id/RegistrationPasswordRepeat"
+        android:layout_width="217dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/green_border"
+        android:drawableLeft="@drawable/baseline_security_24"
+        android:drawablePadding="3dp"
+        android:ems="10"
+        android:hint="Reinserisci Password"
+        android:hyphenationFrequency="normal"
+        android:inputType="textPassword"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textColor="?android:textColorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.545" />
 
     <EditText
         android:id="@+id/RegistrationPassword"
-        android:layout_width="268dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="97dp"
-        android:layout_marginBottom="380dp"
+        android:layout_width="217dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/green_border"
         android:drawableLeft="@drawable/baseline_security_24"
+        android:drawablePadding="3dp"
         android:ems="10"
-        android:hint=" password"
+        android:hint="Password"
+        android:hyphenationFrequency="normal"
         android:inputType="textPassword"
-        android:paddingStart="8dp"
-        android:paddingLeft="8dp"
-        android:paddingTop="4dp"
-        android:paddingEnd="4dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="4dp"
-        android:visibility="visible"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/RegistrationEmailAddress"
-        app:layout_constraintHorizontal_bias="0.636"
-        app:layout_constraintStart_toStartOf="@+id/RegistrationEmailAddress"
-        app:layout_constraintTop_toBottomOf="@+id/RegistrationEmailAddress"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.445" />
+
+    <EditText
+        android:id="@+id/RegistrationEmailAddress"
+        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
+        android:layout_width="217dp"
+        android:layout_height="41dp"
+        android:background="@drawable/green_border"
+        android:drawableLeft="@drawable/ic_email_black"
+        android:ems="10"
+        android:hint=" Email"
+        android:hyphenationFrequency="normal"
+        android:inputType="textEmailAddress"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:shadowColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
+
+    <EditText
+        android:id="@+id/RegistrationEmailAddressRepeat"
+        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
+        android:layout_width="217dp"
+        android:layout_height="41dp"
+        android:background="@drawable/green_border"
+        android:drawableLeft="@drawable/ic_email_black"
+        android:ems="10"
+        android:hint="Reinserisci Email"
+        android:hyphenationFrequency="normal"
+        android:inputType="textEmailAddress"
+        android:paddingStart="16dp"
+        android:paddingLeft="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:shadowColor="#000000"
+        android:textColor="?android:textColorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.382" />
+
+    <Button
+        android:id="@+id/BackButton"
+        android:layout_width="110dp"
+        android:layout_height="54dp"
+        android:onClick="goBack"
+        android:text="Indietro"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
