--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:drawableLeft="@drawable/baseline_email_white"
         android:onClick="goToRegistrationActivity"
         android:text="Registrati tramite Email"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor = "@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,18 +27,19 @@
 
     <Button
         android:id="@+id/googleButton"
-        android:layout_width="247dp"
-        android:layout_height="49dp"
+        android:layout_width="252dp"
+        android:layout_height="63dp"
         android:layout_marginTop="72dp"
         android:background="@drawable/green_border"
         android:drawableLeft="@drawable/google_icon"
-        android:text="Registrati tramite Google"
+        android:text="Registrati o accedi tramite Google"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.862" />
+        app:layout_constraintVertical_bias="0.88" />
 
     <EditText
         android:id="@+id/EmailAddress"
@@ -56,11 +57,12 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:shadowColor="#000000"
+        android:textColor="?android:textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.366" />
+        app:layout_constraintVertical_bias="0.368" />
 
     <EditText
         android:id="@+id/TextPassword"
@@ -74,6 +76,7 @@
         android:hint="Password"
         android:hyphenationFrequency="normal"
         android:inputType="textPassword"
+        android:textColor="?android:textColorPrimary"
         android:paddingStart="16dp"
         android:paddingLeft="16dp"
         android:paddingTop="8dp"
@@ -92,7 +95,7 @@
         android:backgroundTint="#007161"
         android:onClick="onClickListener"
         android:text="Login"
-        android:textColor = "?android:textColorPrimary"
+        android:textColor = "@color/white"
         android:textSize="17dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
