--- a/app/src/main/res/layout/activity_logput.xml
+++ b/app/src/main/res/layout/activity_logput.xml
@@ -7,19 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".LogOut">
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainer"
+        android:name="com.example.loginapp.HomeFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button4"
-        android:layout_width="243dp"
-        android:layout_height="121dp"
-        android:layout_marginStart="154dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginEnd="167dp"
-        android:layout_marginBottom="501dp"
+        android:layout_width="215dp"
+        android:layout_height="64dp"
         android:onClick="logout"
         android:text="logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
