--- a/app/src/main/res/layout/activity_logput.xml
+++ b/app/src/main/res/layout/activity_logput.xml
@@ -23,20 +23,22 @@
         android:id="@+id/button1"
         android:layout_width="83dp"
         android:layout_height="61dp"
-        android:layout_marginStart="56dp"
+        android:layout_marginStart="76dp"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.959" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="83dp"
         android:layout_height="61dp"
+        android:layout_marginEnd="100dp"
         android:text="Button"
-        app:layout_constraintBottom_toBottomOf="@+id/button1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/button1" />
+        app:layout_constraintHorizontal_bias="0.884"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        tools:layout_editor_absoluteY="643dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
